# json-lines-viewer

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  planning.md
.github/workflows/: rust-build-main.yml  rust-publish-on-release.yml  rust-release.yml
src/: event.rs  main.rs  model.rs  props.rs  raw_json_lines.rs  terminal.rs  tui.rs
