[package]
name = "json-lines-viewer"
version = "0.1.0"
edition = "2024"
description = "JSON Lines Viewer - Terminal-UI to view comprehensive application logs in 'Json line format' or Zip files containing such files"
authors = ["Roman Krüger"]
keywords = ["Json", "viewer", "TUI"]

[dependencies]
ratatui = "0.29"
crossterm = "0"
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
dirs = "6"
toml = "0"
rustc-hash = "2"
zip = "3"