[package]
name = "json-lines-viewer"
version = "0.4.6"
edition = "2024"
description = "JSON Lines Viewer - Terminal-UI to view JSON line files (e.g. application logs)"
authors = ["bitmagier"]
keywords = ["JSON", "viewer", "TUI"]
license = "MIT"
repository = "https://github.com/bitmagier/json-lines-viewer"

[dependencies]
ratatui = "0.30.0-alpha.4"
crossterm = "0"
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
dirs = "6"
toml = "0"
rustc-hash = "2"
zip = "4"
anstyle = "1"
